# morning

./: .env.example  .gitignore  CODING_RULES.md  README.md  SLACK_SETUP.md  app.py  dashboard.py  manage.py  morning.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_simple.txt  restapi.py  run_venv.sh  slack_bot.py  start_slack_bot.sh  test_slack_bot.py  web_components.py
agent/: __init__.py  ai_chat.py  analytics.py  evaluation.py  news_analyzer.py  tools.py
agent/core/: workflows.py
agent/prompts/: description.py
api/: api_client.py
api/ki/: kis_auth.py  kis_domstk.py
api/ki/sample/: kis_api01.py  kis_api02.py  kis_api03.py  kis_api04.py
config/: setting.py  slack_config.py
core/: dependency_injection.py  error_handling.py  performance_monitoring.py
logs/: morning.log.backup
scripts/: __init__.py  commit_with_validation.sh  manage.py  morning.sh  pre_commit_check.py
scripts/config/: kis_token_cache.json
strategy/: __init__.py
strategy/backtest/: backtest_engine.py
strategy/engines/: strategy_engine.py
strategy/risk_management/: risk_manager.py
strategy/strategies/: __init__.py  base_strategy.py  breakout_strategy.py  mean_reversion_strategy.py  momentum_strategy.py
test/: README.md  __init__.py  conftest.py  test_exa_integration.py  test_stock_tools.py
test/strategy/: test_momentum_strategy.py  test_risk_manager.py  test_strategy_engine.py
test/ui/: __init__.py  test_dashboard.py  test_web_components.py
test/unit/: test_advanced_risk_management.py  test_agent_analytics.py  test_architecture_issues.py  test_market_intelligence.py  test_portfolio_optimization.py
ui/: __init__.py  dashboard.py  web_components.py
utils/: logger.py
